<resources>
    <string name="app_name">Tasks App</string>
    <string name="task_list">Task List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_a_task">Add a Task</string>
    <string name="task_title">Task Title</string>
    <string name="time">Time</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="am">AM</string>
    <string name="pending">Pending</string>
    <string name="warning">Warning</string>
    <string name="confirmation_message">Do you want to delete “%1$s”, this action can’t be undone.</string>
    <string name="ok">OK</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="sort_by_date_ascending">Sort by Date Ascending</string>
    <string name="sort_by_date_descending">Sort by Date Descending</string>
    <string name="no_tasks_added">No tasks added</string>
</resources>